--- a/examples/advanced/meteor.html
+++ b/examples/advanced/meteor.html
@@ -1,13 +1,13 @@
 <template name="layout">
   <head>
-    <title>Basic IR-Breadcrumb Example</title>
+    <title>Advanced IR-Breadcrumb Example</title>
   </head>
 
   <body>
     <div class="container">
       <div class="row">
         <div class="col-md-8 col-md-offset-2">
-          <h1><a href="https://atmospherejs.com/monbro/iron-router-breadcrumb">Basic IR-Breadcrumb Example</a></h1>
+          <h1><a href="https://atmospherejs.com/monbro/iron-router-breadcrumb">Advanced IR-Breadcrumb Example</a></h1>
           <br/>
 
           {{>yield}}
