add flag to hide link for single items or every last item

--- a/lib/breadcrumb.html
+++ b/lib/breadcrumb.html
@@ -1,7 +1,13 @@
 <template name="breadcrumb">
     <ol class="breadcrumb">
         {{#each Breadcrumb}}
-            <li class="{{cssClasses}}"><a href="{{url}}">{{title}}</a></li>
+            <li class="{{cssClasses}}">
+            {{#if showLink}}
+                <a href="{{url}}">{{title}}</a>
+            {{else}}
+                {{title}}
+            {{/if}}
+            </li>
         {{/each}}
     </ol>
 </template>
