--- a/examples/simple/meteor.html
+++ b/examples/simple/meteor.html
@@ -19,6 +19,7 @@
   {{> navigation}}
 
   <h2>Analytics Overview Title here</h2>
+  <p>This item hast the flag 'showLink' set to false, so thats why it is not linked.</p>
 </template>
 
 <template name="analyticsBooks">
@@ -42,7 +43,7 @@
 <template name="navigation">
   <h1><a href="https://atmospherejs.com/monbro/iron-router-breadcrumb">Simple IR-Breadcrumb Example</a></h1>
 
-  <ul class="nav nav-tabs" data-toggle="tooltip" data-placement="right" title="Navigation">
+  <ul class="nav nav-tabs">
     <li class="{{ isActiveRoute 'dashboard' }}"><a href="{{pathFor route="dashboard"}}">Dashboard</a></li>
     <li class="{{ isActiveRoute 'analytics' }}"><a href="{{pathFor route="analytics"}}">Analytics</a></li>
     <li class="{{ isActiveRoute 'analytics.books' }}"><a href="{{pathFor route="analytics.books"}}">Analytics Books</a></li>
